--- a/ResumeUpload/pom.xml
+++ b/ResumeUpload/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
+   
     <properties>
 
 		<!-- Generic properties -->
@@ -20,6 +21,7 @@
 
 		<!-- Spring -->
 		<spring-framework.version>4.2.6.RELEASE</spring-framework.version>
+		<springsecurity.version>4.1.1.RELEASE</springsecurity.version>
 
 		<!-- Hibernate / JPA -->
 		<hibernate.version>4.2.1.Final</hibernate.version>
@@ -136,7 +138,18 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+ <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${springsecurity.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${springsecurity.version}</version>
+        </dependency>
+      
 	</dependencies>	
 	
 	<build>
